--- a/app/views/index.html
+++ b/app/views/index.html
@@ -41,6 +41,12 @@
 
       <h2>Wagtail pages</h2>
 
+      <ul>
+        <li>
+          <a href="/pages/General_Page">General_Page</a>
+        </li>
+      </ul>
+
       <h3 class="nhsuk-heading-xs">Behind the headlines</h3>
 
       <ul>
@@ -86,6 +92,17 @@
         </li>
         <li>
           <a href="/pages/conditions/Condition_Page_Section">Condition_Page_Section</a>
+        </li>
+      </ul>
+
+      <h3 class="nhsuk-heading-xs">General</h3>
+      
+      <ul>
+        <li>
+          <a href="/pages/general/general_content_article">general_content_article</a>
+        </li>
+        <li>
+          <a href="/pages/general/general_content_index">general_content_index</a>
         </li>
       </ul>
 
