--- a/app/views/index.html
+++ b/app/views/index.html
@@ -106,6 +106,51 @@
         </li>
       </ul>
 
+      <h3 class="nhsuk-heading-xs">Guides and Live Well</h3>
+      
+      <ul>
+        <li>
+          <a href="/pages/guides/Guide_Page_Section">Guide_Page_Section</a>
+        </li>
+        <li>
+          <a href="/pages/guides/Guide_Page">Guide_Page</a>
+        </li>
+        <li>
+          <a href="/pages/guides/guides_article">guides_article</a>
+        </li>
+        <li>
+          <a href="/pages/guides/guides_index">guides_index</a>
+        </li>
+        <li>
+          <a href="/pages/guides/Livewell_Page_Section">Livewell_Page_Section</a>
+        </li>
+        <li>
+          <a href="/pages/guides/Livewell_Page">Livewell_Page</a>
+        </li>
+        <li>
+          <a href="/pages/guides/Livewell_Section_HomePage">Livewell_Section_HomePage</a>
+        </li>
+      </ul>
+
+      <h3 class="nhsuk-heading-xs">Medicines</h3>
+      
+      <ul>
+        <li>
+          <a href="/pages/medicines/medicines__page">medicines__page</a>
+        </li>
+        <li>
+          <a href="/pages/medicines/Medicines_Section_HomePage">Medicines_Section_HomePage</a>
+        </li>
+      </ul>
+
+      <h3 class="nhsuk-heading-xs">NDOP</h3>
+      
+      <ul>
+        <li>
+          <a href="/pages/ndop/NDOP_Page">NDOP_Page</a>
+        </li>
+      </ul>
+
     </div>
   </div>
 {% endblock %}
