--- a/app/assets/sass/components/_guide.scss
+++ b/app/assets/sass/components/_guide.scss
@@ -45,7 +45,6 @@
   background: $color_nhsuk-blue url("data:image/svg+xml,%3Csvg class='nhsuk-icon nhsuk-icon__plus' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='32' aria-hidden='true'%3E%3Ccircle cx='12' cy='12' r='10' fill='none'%3E%3C/circle%3E%3Cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M12 8v8M8 12h8'%3E%3C/path%3E%3C/svg%3E%0A") right 4px center no-repeat; // sass-lint:disable-line quotes
   box-shadow: inset 0 -4px 0 0 $color_shade-nhsuk-blue-20;
   color: $color_nhsuk-white;
-  cursor: pointer;
   display: inline-block;
   padding: nhsuk-spacing(3) nhsuk-spacing(4) nhsuk-spacing(3) nhsuk-spacing(3);
   position: relative;
@@ -73,6 +72,25 @@
   }
 }
 
+.guides-nav > ul { //TODO use proper selector
+  list-style: none;
+  margin-top: 0;
+  padding: 0;
+
+  li span.current {
+    color: $color_nhsuk-black;
+  }
+  
+  @include mq($from: desktop) {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .guides-nav__item--selected {
   .guides-nav__label {
     background: $color_nhsuk-white url("data:image/svg+xml,%3Csvg class='nhsuk-icon nhsuk-icon__minus' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='32' aria-hidden='true'%3E%3Ccircle cx='12' cy='12' r='10' fill='none'%3E%3C/circle%3E%3Cpath fill='none' stroke='%23005eb8' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M8 12h8'%3E%3C/path%3E%3C/svg%3E%0A") right 4px center no-repeat; /* [3] */ // sass-lint:disable-line quotes
@@ -88,13 +106,14 @@
 
 .guides-nav__contents {
   background-color: $color_nhsuk-white;
-  border-bottom: 4px solid $nhsuk-border-color;
+  border-bottom: 2px solid $nhsuk-border-color;
   color: $color_nhsuk-blue;
   display: none;
   padding: nhsuk-spacing(3);
 
   @include mq($until: desktop) {
     border-bottom: 1px solid $color_nhsuk-grey-5;
+    padding-bottom: 0;
     padding-top: 0;
   }
 
@@ -120,33 +139,27 @@
   border-bottom: 1px solid $color_nhsuk-grey-5;
 }
 
-
-.guides-nav__contents--half {
-  @include mq($from: desktop) {
-    float: left;
-    width: 50%;
-  }
+.guides-nav__sub-nav {
+  padding: nhsuk-spacing(3) 0;
 }
 
 .guides-nav__item--selected .guides-nav__contents {
   display: block;
 }
 
-.guides-nav > ul { //TODO use proper selector
-  list-style: none;
-  margin-top: 0;
-  padding: 0;
+.guides-nav__feature-box {
+  @include top-and-bottom;
 
-  li span.current {
-    color: $color_nhsuk-black;
-  }
-  
+  background: $color_nhsuk-grey-5;
+  margin-bottom: nhsuk-spacing(3);
+  padding: nhsuk-spacing(4);
+  width: 100%;
+}
+
+.guides-nav__sub-nav,
+.guides-nav__feature-box {
   @include mq($from: desktop) {
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: -o-flex;
-    display: flex;
-    justify-content: space-between;
+    float: left;
+    width: 50%;
   }
 }
