--- a/app/views/index.html
+++ b/app/views/index.html
@@ -37,6 +37,9 @@
         <li>
           <a href="/layouts/layout-nhsuk-two-columns-left">Two columns left</a>
         </li>
+        <li>
+          <a href="/layouts/layout-guide">Guide page template</a>
+        </li>
       </ul>
 
       <h2>Wagtail pages</h2>
@@ -102,6 +105,9 @@
           <a href="/pages/general/general_content_index">general_content_index</a>
         </li>
         <li>
+          <a href="/pages/general/general_content_index-v2">general_content_index (Version 2)</a>
+        </li>
+        <li>
           <a href="/pages/general/general_content_article">general_content_article</a>
         </li>
       </ul>
@@ -110,26 +116,30 @@
       
       <ul>
         <li>
-          <a href="/pages/guides/Guide_Page_Section">Guide_Page_Section</a>
-        </li>
-        <li>
           <a href="/pages/guides/Guide_Page">Guide_Page</a>
         </li>
         <li>
-          <a href="/pages/guides/guides_article">guides_article</a>
+          <a href="/pages/guides/Guide_Page_Section">Guide_Page_Section</a>
         </li>
         <li>
           <a href="/pages/guides/guides_index">guides_index</a>
         </li>
         <li>
-          <a href="/pages/guides/Livewell_Page_Section">Livewell_Page_Section</a>
+          <a href="/pages/guides/guides_index-v2">guides_index (Version 2)</a> 
+        </li>
+        <li>
+          <a href="/pages/guides/guides_article">guides_article</a>
+        </li>
+        <li>
+          <a href="/pages/guides/Livewell_Section_HomePage">Livewell_Section_HomePage</a>
         </li>
         <li>
           <a href="/pages/guides/Livewell_Page">Livewell_Page</a>
         </li>
         <li>
-          <a href="/pages/guides/Livewell_Section_HomePage">Livewell_Section_HomePage</a>
+          <a href="/pages/guides/Livewell_Page_Section">Livewell_Page_Section</a>
         </li>
+
       </ul>
 
       <h3 class="nhsuk-heading-xs">Medicines</h3>
