--- a/app/views/layouts/layout-guide.html
+++ b/app/views/layouts/layout-guide.html
@@ -35,19 +35,19 @@
 
     </div>
 
-    <div class="nhsuk-grid-column-one-third">
+    <aside class="nhsuk-grid-column-one-third">
 
       {% block content_one_third %}
 
         <div class="layout-example">
 
-          One third column (for sec. nav)
+          One third column
 
         </div>
       
       {% endblock %}
 
-    </div>
+    </aside>
   </div>
 
 {% endblock %}
