--- a/app/views/layouts/layout-nhsuk-two-columns-right.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-right.html
@@ -36,7 +36,7 @@
       </article>
     </div>  
 
-    <div class="nhsuk-grid-column-one-third">
+    <aside class="nhsuk-grid-column-one-third">
       
       {% block content_one_third %}
       
@@ -48,6 +48,6 @@
         
       {% endblock %}
 
-    </div>
+    </aside>
   </div>
 {% endblock %}
