--- a/app/views/pages/general/general_content_index-v2.html
+++ b/app/views/pages/general/general_content_index-v2.html
@@ -13,9 +13,9 @@
 {% block content_full_width %}
 
 <div class="nhsuk-grid-row nhsuk-promo-group">
-  <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
+  <div class="nhsuk-grid-column-one-half nhsuk-promo-group__item">
             
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/general/general_content_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">About the NHS website</h3>
@@ -26,9 +26,9 @@
 
   </div>
 
-  <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
+  <div class="nhsuk-grid-column-one-half nhsuk-promo-group__item">
 
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/general/general_content_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">NHS website datasets</h3>
