--- a/app/views/pages/guides/guides_index-v2.html
+++ b/app/views/pages/guides/guides_index-v2.html
@@ -15,7 +15,7 @@
 <div class="nhsuk-grid-row nhsuk-promo-group">
 
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">  
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Introduction to care and support</h3>
@@ -26,7 +26,7 @@
   </div>
   
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Help from social services and charities</h3>
@@ -37,7 +37,7 @@
   </div>
 
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Care services, equipment and care homes</h3>
@@ -54,7 +54,7 @@
 <div class="nhsuk-grid-row nhsuk-promo-group">
 
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">  
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Money, work and benefits</h3>
@@ -65,7 +65,7 @@
   </div>
   
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Care after a hospital stay</h3>
@@ -76,7 +76,7 @@
   </div>
 
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Support and benefits for carers</h3>
@@ -91,7 +91,7 @@
 <div class="nhsuk-grid-row nhsuk-promo-group">
 
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">  
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Practical tips if you care for someone</h3>
@@ -102,7 +102,7 @@
   </div>
   
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Caring for children and young people</h3>
@@ -115,7 +115,7 @@
   </div>
 
   <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-    <div class="nhsuk-promo nhsuk-promo--mute">
+    <div class="nhsuk-promo">
       <a class="nhsuk-promo__link-wrapper" href="/pages/guides/guides_article">
         <div class="nhsuk-promo__content">
           <h3 class="nhsuk-promo__heading">Making decisions for someone else</h3>
