--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -81,20 +81,22 @@ h1 + .nhsuk-lede-text--small {
 }
 
 // Variant for a promo with a transparent background
-.nhsuk-promo__link-wrapper--mute.nhsuk-promo__link-wrapper--mute {
-  background-color: transparent;
-  box-shadow: none;
-
-  &:hover,
-  &:focus {
+.nhsuk-promo--mute {
+  .nhsuk-promo__link-wrapper {
     background-color: transparent;
     box-shadow: none;
-    outline: nhsuk-spacing(1) solid $nhsuk-focus-color;
-    outline-offset: nhsuk-spacing(1) + nhsuk-spacing(2);
-  }
 
-  .nhsuk-promo__content {
-      padding: nhsuk-spacing(0);
+    &:hover,
+    &:focus {
+      background-color: transparent;
+      box-shadow: none;
+      outline: nhsuk-spacing(1) solid $nhsuk-focus-color;
+      outline-offset: nhsuk-spacing(1) + nhsuk-spacing(2);
+    }
+
+    .nhsuk-promo__content {
+        padding: nhsuk-spacing(0);
+    }
   }
 }
 
