--- a/app/views/layouts/layout-nhsuk-full-width.html
+++ b/app/views/layouts/layout-nhsuk-full-width.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="nhsuk-grid-row">
+  <aside class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
       {% block content_full_width %}
@@ -33,7 +33,7 @@
       
       {% endblock %}
 
-    </div>
+    </aside>
   </div>
 
 {% endblock %}
