--- a/app/views/layouts/layout-nhsuk-two-columns-right.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-right.html
@@ -34,6 +34,9 @@
         {% endblock %}
 
       </article>
+
+      {% block content_two_thirds_after_article %}
+      {% endblock %}
     </div>  
 
     <aside class="nhsuk-grid-column-one-third">
