--- a/app/views/pages/medicines/Medicines_Section_HomePage.html
+++ b/app/views/pages/medicines/Medicines_Section_HomePage.html
@@ -1,1 +1,175 @@
-https://www.nhs.uk/medicines/
+{% extends 'layouts/layout-nhsuk-full-width.html' %}
+
+{% block pageTitle %}
+  Medicines_Section_HomePage
+{% endblock %}
+
+{% block content_page_heading %}
+
+  <h1>Medicines A to Z</h1>
+
+{% endblock %}
+
+{% block content_full_width %}
+
+{{ azNav({
+  "classes": "nhsuk-u-margin-top-0",
+            "items": [
+              {
+                "label": "A"
+              },
+              {
+                "disable": "true",
+                "label": "B"
+              },
+              {
+                "label": "C"
+              },
+              {
+                "label": "D"
+              },
+              {
+                "label": "E"
+              },
+              {
+                "label": "F"
+              },
+              {
+                "label": "G"
+              },
+              {
+                "label": "H"
+              },
+              {
+                "label": "I"
+              },
+              {
+                "label": "J"
+              },
+              {
+                "label": "K"
+              },
+              {
+                "label": "L"
+              },
+              {
+                "label": "M"
+              },
+              {
+                "label": "N"
+              },
+              {
+                "label": "O"
+              },
+              {
+                "label": "P"
+              },
+              {
+                "label": "Q"
+              },
+              {
+                "label": "R"
+              },
+              {
+                "label": "S"
+              },
+              {
+                "label": "T"
+              },
+              {
+                "label": "U"
+              },
+              {
+                "label": "V"
+              },
+              {
+                "label": "W"
+              },
+              {
+                "label": "X"
+              },
+              {
+                "label": "Y"
+              },
+              {
+                "label": "Z"
+              }
+            ]
+          }) }}
+
+          <ol class="nhsuk-list">
+          <li>
+          {{ listPanel({
+            "label": "A",
+            "id": "A",
+            "backToTop": "true",
+            "backToTopLink": "#nhsuk-nav-a-z",
+            "items": [
+              {
+                "URL": "/conditions/abdominal-aortic-aneurysm/",
+                "link": "AAA"
+              },
+              {
+                "URL": "/conditions/abdominal-aortic-aneurysm/",
+                "link": "Abdominal aortic aneurysm"
+              },
+              {
+                "URL": "/conditions/abscess/",
+                "link": "Abscess"
+              }
+            ]
+          }) }}
+          </li>
+          <li>
+          {{ listPanel({
+            "label": "B",
+            "id": "B",
+            "disable": "true",
+            "backToTop": "true",
+            "backToTopLink": "#nhsuk-nav-a-z",
+            "message": "There are currently no conditions listed"
+          }) }}
+          </li>
+          <li>
+          {{ listPanel({
+            "label": "C",
+            "id": "C",
+            "backToTop": "true",
+            "backToTopLink": "#nhsuk-nav-a-z",
+            "items": [
+              {
+                "URL": "/conditions/chest-pain/",
+                "link": "Chest pain"
+              },
+              {
+                "URL": "/conditions/cold-sores/",
+                "link": "Cold sore"
+              }
+            ]
+          }) }}
+          </li>
+          <li>
+          {{ listPanel({
+            "label": "D",
+            "id": "D",
+            "backToTop": "true",
+            "backToTopLink": "#nhsuk-nav-a-z",
+            "items": [
+              {
+                "URL": "/conditions/dandruff/",
+                "link": "Dandruff"
+              },
+              {
+                "URL": "/conditions/dementia/",
+                "link": "Dementia"
+              },
+              {
+                "URL": "/conditions/toothache/",
+                "link": "Dental pain"
+              }
+            ]
+          }) }}
+          </li>
+          </ol>
+
+{% endblock %}
