updated meds page

--- a/app/views/pages/medicines/medicines__page.html
+++ b/app/views/pages/medicines/medicines__page.html
@@ -404,7 +404,10 @@ with the packet.</p>
               9. Common questions
             </h2>
             <div class="block-section_text">
-              <div class="block-common_question">
+              
+<div class="block-expander_group">
+
+<div class="nhsuk-expander-group">
 
 
 
@@ -434,10 +437,6 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
-
-
 
 <details class="nhsuk-details nhsuk-expander">
     <summary class="nhsuk-details__summary" role="button" aria-controls="details-content-0" aria-expanded="false">
@@ -457,10 +456,6 @@ with the packet.</p>
 </div>
     </div>
 </details>
-
-
-</div>
-<div class="block-common_question">
 
 
 
@@ -490,8 +485,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -515,8 +509,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -540,8 +533,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -565,8 +557,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -592,8 +583,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -623,8 +613,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -648,8 +637,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -677,8 +665,8 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
+
 
 
 
@@ -706,8 +694,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -731,8 +718,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -760,8 +746,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -785,8 +770,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -812,8 +796,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -837,8 +820,7 @@ with the packet.</p>
 </details>
 
 
-</div>
-<div class="block-common_question">
+
 
 
 
@@ -879,7 +861,7 @@ with the packet.</p>
     </div>
 </details>
 
-
+</div>
 </div>
             </div>
           </section>
