Added ndop prototype url to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -157,7 +157,7 @@
       
       <ul>
         <li>
-          <a href="/pages/ndop/NDOP_Page">NDOP_Page</a>
+          <a href="https://ndop-r.herokuapp.com/website/release/overview">NDOP_Page</a>
         </li>
       </ul>
 
