--- a/app/views/index.html
+++ b/app/views/index.html
@@ -85,7 +85,10 @@
           <a href="/pages/conditions/Conditions_Section_HomePage">Conditions_Section_HomePage</a>
         </li>
         <li>
-          <a href="/pages/conditions/conditions_curated_hub_page">conditions_curated_hub_page</a>
+          <a href="/pages/conditions/conditions_curated_hub_page">conditions_curated_hub_page - Foot pain</a>
+        </li>
+        <li>
+          <a href="/pages/conditions/conditions_curated_hub_page-diabetes">conditions_curated_hub_page - Diabetes</a>
         </li>
         <li>
           <a href="/pages/conditions/conditions_article_page">conditions_article_page</a>
@@ -158,6 +161,17 @@
       <ul>
         <li>
           <a href="https://ndop-r.herokuapp.com/website/release/overview">NDOP_Page</a>
+        </li>
+      </ul>
+
+      <h2>Components</h2>
+
+      <ul>
+        <li>
+          <a href="/components/AppLinksBlock">AppLinksBlock</a>
+        </li>
+        <li>
+          <a href="/components/BrightcoveVideoBlock">BrightcoveVideoBlock</a>
         </li>
       </ul>
 
