--- a/app/views/layouts/layout-guide.html
+++ b/app/views/layouts/layout-guide.html
@@ -1,8 +1,9 @@
 {% extends 'layouts/layout-nhsuk.html' %}
 
 {% block content %}
+<article>
 
-<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
       {% block content_page_heading %}
@@ -49,6 +50,8 @@
 
     </aside>
   </div>
+
+</article>
 
 {% endblock %}
 
