--- a/app/views/pages/general/general_content_article.html
+++ b/app/views/pages/general/general_content_article.html
@@ -194,7 +194,7 @@
     
   
     
-      <li>How to access your health records</li>
+      <li class="nhsuk-related-nav__item nhsuk-related-nav__item--selected">How to access your health records</li>
     
   
     
