--- a/app/views/layouts/layout-nhsuk-full-width.html
+++ b/app/views/layouts/layout-nhsuk-full-width.html
@@ -1,8 +1,9 @@
 {% extends 'layouts/layout-nhsuk.html' %}
 
 {% block content %}
+<article>
 
-<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
       {% block content_page_heading %}
@@ -36,4 +37,5 @@
     </aside>
   </div>
 
+</article>
 {% endblock %}
