--- a/app/views/layouts/layout-nhsuk-two-columns-right.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-right.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/layout-nhsuk.html' %}
 
 {% block content %}
+<article>
+
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
@@ -21,7 +23,6 @@
 
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <article>
 
         {% block content_two_thirds %}
         
@@ -33,8 +34,6 @@
           
         {% endblock %}
 
-      </article>
-
       {% block content_two_thirds_after_article %}
       {% endblock %}
     </div>  
@@ -45,7 +44,9 @@
       
         <div class="layout-example">
 
-          One third column (for sec. nav)
+          <h2>aside</h2>
+          
+          <p>One third column (for secondary nav etc.)</p>
           
         </div>
         
@@ -53,4 +54,6 @@
 
     </aside>
   </div>
+
+</article>
 {% endblock %}
