--- a/app/views/pages/conditions/conditions_article_page-diabetes.html
+++ b/app/views/pages/conditions/conditions_article_page-diabetes.html
@@ -55,10 +55,7 @@
 
     <h3 class="nhsuk-related-nav__sub-heading">What it is</h3>
 
-    <ul class="nhsuk-related-nav__list">
-
-      <li class="nhsuk-related-nav__item nhsuk-related-nav__item--selected">
-        About type 1 diabetes</li>
+    <ul class="nhsuk-related-nav__list nhsuk-related-nav__list--sub">
 
       <li class="nhsuk-related-nav__item">
         <a class="nhsuk-related-nav__link" href="#">Symptoms and getting diagnosed</a></li>
@@ -67,7 +64,7 @@
 
     <h3 class="nhsuk-related-nav__sub-heading">Under 18</h3>
 
-    <ul class="nhsuk-related-nav__list">
+    <ul class="nhsuk-related-nav__list nhsuk-related-nav__list--sub">
 
       <li class="nhsuk-related-nav__item">
         <a class="nhsuk-related-nav__link" href="#">Type 1 diabetes in children</a></li>
@@ -76,7 +73,7 @@
 
     <h3 class="nhsuk-related-nav__sub-heading">Insulin</h3>
 
-    <ul class="nhsuk-related-nav__list">
+    <ul class="nhsuk-related-nav__list nhsuk-related-nav__list--sub">
 
       <li class="nhsuk-related-nav__item">
         <a class="nhsuk-related-nav__link" href="#">About insulin</a></li>
