--- a/app/views/pages/conditions/conditions_curated_hub_page.html
+++ b/app/views/pages/conditions/conditions_curated_hub_page.html
@@ -8,7 +8,7 @@
   <h1>Foot pain</h1>
 
   <div class="nhsuk-lede-text">
-    <p>Choose which area of your foot hurts most to read about: treatments, when to get medical help and possible causes.</p>
+    <p>Choose which area of your foot hurts most to read about:.</p>
     <ul>
       <li>treatments</li>
       <li>when to get medical help</li>
