--- a/app/assets/sass/components/_related-nav.scss
+++ b/app/assets/sass/components/_related-nav.scss
@@ -28,9 +28,7 @@
 }
 
 .nhsuk-related-nav__sub-heading {
+  @include nhsuk-responsive-margin(2, "bottom");
+  @include nhsuk-responsive-padding(2, "top");
   @include nhsuk-typography-responsive(19, $override-line-height: 1.2);
-
-  border-top: 1px solid $nhsuk-border-color;
-  margin-bottom: nhsuk-spacing(3);
-  padding-top: nhsuk-spacing(3);
 }
