--- a/app/views/layouts/layout-nhsuk-two-columns-right.html
+++ b/app/views/layouts/layout-nhsuk-two-columns-right.html
@@ -1,7 +1,6 @@
 {% extends 'layouts/layout-nhsuk.html' %}
 
 {% block content %}
-<article>
 
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
@@ -21,39 +20,39 @@
     </div>
   </div>
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+  <article>
 
-        {% block content_two_thirds %}
+    <div class="nhsuk-grid-row">
+      <div class="nhsuk-grid-column-two-thirds">
+
+          {% block content_two_thirds %}
+          
+            <div class="layout-example">
+
+              Two thirds column (for page content)
+              
+            </div>
+            
+          {% endblock %}
+
+        {% block content_two_thirds_after_article %}
+        {% endblock %}
+      </div>  
+
+      <aside class="nhsuk-grid-column-one-third">
+        
+        {% block content_one_third %}
         
           <div class="layout-example">
-
-            Two thirds column (for page content)
+            
+            One third column (for secondary nav etc.)
             
           </div>
           
         {% endblock %}
 
-      {% block content_two_thirds_after_article %}
-      {% endblock %}
-    </div>  
+      </aside>
+    </div>
 
-    <aside class="nhsuk-grid-column-one-third">
-      
-      {% block content_one_third %}
-      
-        <div class="layout-example">
-
-          <h2>aside</h2>
-          
-          <p>One third column (for secondary nav etc.)</p>
-          
-        </div>
-        
-      {% endblock %}
-
-    </aside>
-  </div>
-
-</article>
+  </article>
 {% endblock %}
