--- a/app/views/index.html
+++ b/app/views/index.html
@@ -145,6 +145,14 @@
 
       </ul>
 
+      <h3 class="nhsuk-heading-xs">Homepage</h3>
+      
+      <ul>
+        <li>
+          <a href="/pages/home_page">home_page</a>
+        </li>
+      </ul>
+
       <h3 class="nhsuk-heading-xs">Medicines</h3>
       
       <ul>
