--- a/app/views/layouts/layout-guide.html
+++ b/app/views/layouts/layout-guide.html
@@ -12,7 +12,7 @@
 
           <h1>Guide page template</h1>
 
-          <p class="nhsuk-lede-text">Full width (for page heading and the megasauras menu)</p>
+          <p class="nhsuk-lede-text">Full width (for page heading and the mega menu)</p>
           
         </div>
       
