--- a/app/views/layouts/layout-nhsuk.html
+++ b/app/views/layouts/layout-nhsuk.html
@@ -8,6 +8,10 @@
   NHS.UK page layout - NHS.UK prototype kit
 {% endblock %}
 
+{% block headCSS %}
+  <link href="/css/main.css" rel="stylesheet">
+{% endblock %}
+
 <!-- Header goes inside this block -->
 {% block header %}
   {{ header({
