--- a/app/views/index.html
+++ b/app/views/index.html
@@ -178,6 +178,12 @@
         <li>
           <a href="/components/BrightcoveVideoBlock">BrightcoveVideoBlock</a>
         </li>
+        <li>
+          <a href="/components/NDOP_Document">NDOP_Document</a>
+        </li>
+        <li>
+          <a href="/components/PainScale">PainScale</a>
+        </li>
       </ul>
 
     </div>
