Added treatment card

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -184,6 +184,9 @@
         <li>
           <a href="/components/PainScale">PainScale</a>
         </li>
+        <li>
+          <a href="/components/TreatmentCardBlock">TreatmentCardBlock</a>
+        </li>
       </ul>
 
     </div>
