Updated mega menu link mark-up

--- a/app/views/pages/guides/Livewell_Page.html
+++ b/app/views/pages/guides/Livewell_Page.html
@@ -230,34 +230,21 @@
 
               <div class="guides-nav__sub-nav">
 
-                <ul class="nhsuk-list nhsuk-u-margin-bottom-2">
-
-                  <li> 
-                    <a href="/live-well/eat-well/common-digestive-problems-and-how-to-treat-them/">
-                      Common digestive problems and what to do
-                    </a>  
-                  </li>
-                  <li> 
-                    <a href="/live-well/eat-well/good-foods-to-help-your-digestion/">
-                    Good foods to help your digestion
-                    </a>
-                  </li>
-                  <li>
-                    <a href="/live-well/eat-well/five-lifestyle-tips-for-a-healthy-tummy/">
-                      Tips for a healthy tummy
-                    </a> 
-                  </li>
-                  <li>
-                    <a href="/live-well/eat-well/remedies-for-bloating-and-wind/">
-                      Beat the bloat
-                    </a>
-                  </li>
-                  <li>      
-                    <a href="/live-well/eat-well/should-you-cut-out-bread-to-stop-bloating/">
-                      Should you cut out bread to stop bloating?
-                    </a>
-                  </li>
-                </ul>
+                <a class="guides-nav__sub-nav-link" href="/live-well/eat-well/common-digestive-problems-and-how-to-treat-them/">
+                  Common digestive problems and what to do
+                </a>  
+                <a class="guides-nav__sub-nav-link" href="/live-well/eat-well/good-foods-to-help-your-digestion/">
+                Good foods to help your digestion
+                </a>
+                <a class="guides-nav__sub-nav-link" href="/live-well/eat-well/five-lifestyle-tips-for-a-healthy-tummy/">
+                  Tips for a healthy tummy
+                </a> 
+                <a class="guides-nav__sub-nav-link" href="/live-well/eat-well/remedies-for-bloating-and-wind/">
+                  Beat the bloat
+                </a>    
+                <a class="guides-nav__sub-nav-link" href="/live-well/eat-well/should-you-cut-out-bread-to-stop-bloating/">
+                  Should you cut out bread to stop bloating?
+                </a>
 
             </div>
               
