--- a/app/assets/sass/components/_guide.scss
+++ b/app/assets/sass/components/_guide.scss
@@ -115,7 +115,6 @@
   color: $color_nhsuk-blue;
   display: none;
   padding: nhsuk-spacing(3);
-  color:red;
 
   @include mq($until: desktop) {
     border-bottom: 1px solid $color_nhsuk-grey-5;
@@ -150,6 +149,11 @@
 .guides-nav__sub-nav {
   @include nhsuk-responsive-padding(4, "bottom");
   @include nhsuk-responsive-padding(4, "top");
+}
+
+.guides-nav__sub-nav-link {
+  display: inline-block;
+  margin-bottom: nhsuk-spacing(2);
 }
 
 .guides-nav__item--selected .guides-nav__contents {
