--- a/app/views/index.html
+++ b/app/views/index.html
@@ -189,6 +189,29 @@
         </li>
       </ul>
 
+      <h2>Forms</h2>
+
+      <ul>
+        <li>
+          <a href="/forms/CookiePreferencesFormBlock">CookiePreferencesFormBlock</a>
+        </li>
+        <li>
+          <a href="/forms/DementiaSignupBlock">DementiaSignupBlock</a>
+        </li>
+        <li>
+          <a href="/forms/DementiaSignupBlock-errors">DementiaSignupBlock - with errors</a>
+        </li>
+        <li>
+          <a href="/forms/DueDateCalculatorBlock">DueDateCalculatorBlock</a>
+        </li>
+        <li>
+          <a href="/forms/DueDateCalculatorBlock-errors">DueDateCalculatorBlock - with errors</a>
+        </li>
+        <li>
+          <a href="/forms/NewsletterSignupBlock">NewsletterSignupBlock</a>
+        </li>
+      </ul>
+
     </div>
   </div>
 {% endblock %}
